@@ -1173,7 +1173,7 @@ dmo_drawSolid(struct dm_obj *dmop,
  * Draw a scale.
  *
  * Usage:
- * drawScale vsize color
+ * drawScale vsize unit color
  *
  */
 int
@@ -1181,12 +1181,13 @@ dmo_drawScale_cmd(struct dm_obj *dmop,
 		  int argc,
 		  const char **argv)
 {
+    const char *unit;
     int color[3];
     double scan;
     fastf_t viewSize;
     struct bu_vls vls = BU_VLS_INIT_ZERO;
 
-    if (argc != 3) {
+    if (argc != 4) {
 	bu_vls_printf(&vls, "helplib_alias dm_drawScale %s", argv[0]);
 	Tcl_Eval(dmop->interp, bu_vls_addr(&vls));
 	bu_vls_free(&vls);
@@ -1203,7 +1204,10 @@ dmo_drawScale_cmd(struct dm_obj *dmop,
     /* convert double to fastf_t */
     viewSize = scan;
 
-    if (sscanf(argv[2], "%d %d %d",
+
+    unit = argv[2];
+
+    if (sscanf(argv[3], "%d %d %d",
 	       &color[0],
 	       &color[1],
 	       &color[2]) != 3) {
@@ -1227,7 +1231,7 @@ dmo_drawScale_cmd(struct dm_obj *dmop,
 	return BRLCAD_ERROR;
     }
 
-    dm_draw_scale(dmop->dmo_dmp, viewSize, color, color);
+    dm_draw_scale(dmop->dmo_dmp, viewSize, unit, color, color);
 
     return BRLCAD_OK;
 }
@@ -1235,7 +1239,7 @@ dmo_drawScale_cmd(struct dm_obj *dmop,
 
 /*
  * Usage:
- * objname drawScale vsize color
+ * objname drawScale vsize unit color
  */
 HIDDEN int
 dmo_drawScale_tcl(void *clientData, int argc, const char **argv)
