@@ -15685,6 +15685,7 @@ go_draw_faceplate(struct ged_obj *gop, struct ged_dm_view *gdvp)
     if (gdvp->gdv_view->gv_view_scale.gos_draw)
 	dm_draw_scale(gdvp->gdv_dmp,
 		      gdvp->gdv_view->gv_size*gop->go_gedp->ged_wdbp->dbip->dbi_base2local,
+		      bu_units_string(1/gop->go_gedp->ged_wdbp->dbip->dbi_base2local),
 		      gdvp->gdv_view->gv_view_scale.gos_line_color,
 		      gdvp->gdv_view->gv_view_params.gos_text_color);
 
